--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ name = "cardboard"
 pages_build_output_dir = "public"
 compatibility_date = "2024-09-26"
 
-[[d1_databases]]
+[[env.production.d1_databases]]
 database_id = "ecd69ccc-36a5-439f-9145-bb005dc5174c"
-binding = "DB"
-database_name = "DB"
+binding = "PRODUCTION_DB"
+database_name = "PRODUCTION_DB"
