--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "scripts": {
-    "dev": "wrangler pages dev",
     "build": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment",
-    "migrate": "wrangler d1 migrations apply DB",
-    "watch": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment --watch"
+    "db:destroy": "rm -rf .wrangler/state",
+    "db:migrate": "wrangler d1 migrations apply DB --local",
+    "db:migrate:production": "wrangler d1 migrations apply DB --remote",
+    "dev": "concurrently -k \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "wrangler pages dev",
+    "dev:frontend": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment --watch"
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "esbuild": "^0.24.0",
     "wrangler": "^3.78.10"
   },
