--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment",
-    "db:destroy": "rm -rf .wrangler/state",
+    "db:drop": "rm -rf .wrangler/state",
     "db:migrate": "wrangler d1 migrations apply DB --local",
     "db:migrate:production": "wrangler d1 migrations apply DB --remote",
     "dev": "concurrently -k \"npm run dev:backend\" \"npm run dev:frontend\"",
