--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "scripts": {
-    "build": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment",
+    "build": "npm run build:tailwind && npm run build:esbuild",
+    "build:tailwind": "tailwindcss -i src/app.css -o public/app.css",
+    "build:esbuild": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment",
     "db:drop": "rm -rf .wrangler/state",
     "db:migrate": "wrangler d1 migrations apply DB --local",
     "db:migrate:production": "wrangler d1 migrations apply DB --remote",
-    "dev": "concurrently -k \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "wrangler pages dev",
-    "dev:frontend": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment --watch"
+    "dev": "concurrently -k \"npm run dev:wrangler\" \"npm run dev:esbuild\" \"npm run dev:tailwind\"",
+    "dev:wrangler": "wrangler pages dev",
+    "dev:esbuild": "esbuild src/app.jsx --bundle --minify --outfile=public/app.js --jsx-factory=h --jsx-fragment=Fragment --watch",
+    "dev:tailwind": "tailwindcss -i src/app.css -o public/app.css --watch"
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
     "esbuild": "^0.24.0",
+    "tailwindcss": "^3.4.13",
     "wrangler": "^3.78.10"
   },
   "dependencies": {
