--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,4 @@ compatibility_date = "2024-09-26"
 database_id = "ecd69ccc-36a5-439f-9145-bb005dc5174c"
 binding = "DB"
 database_name = "DB"
+migrations_dir = "db/migrations"
