--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "wrangler": "^3.78.10"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "preact": "^10.24.1",
     "preact-router": "^4.1.2",
     "sortablejs": "^1.15.3"
